@@ -4,9 +4,9 @@ import com.luv2code.spring_boot_library.exception.RestAccessDeniedHandler;
 import com.luv2code.spring_boot_library.exception.RestAuthenticationEntryPoint;
 import com.luv2code.spring_boot_library.service.MyUserDetailsService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
@@ -24,6 +24,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -42,30 +43,23 @@ public class SecurityConfig {
     @Autowired
     private RestAccessDeniedHandler restAccessDeniedHandler;
 
+    @Value("${app.allowed.origins}")
+    private String allowedOrigins;
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .cors(Customizer.withDefaults())
                 .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(request -> request
-                        .requestMatchers(
-                                "/api/admin/secure/**"
-                        ).hasRole("ADMIN")
-                        .requestMatchers(
-                                "/api/books/secure/**",
-                                "/api/reviews/secure/**",
-                                "/api/messages/secure/**",
-                                "/api/payment/secure/**"
-                        ).authenticated()
-                        .requestMatchers(HttpMethod.GET,
-                                "/api/books/**",
-                                "/api/reviews/**",
-                                "/api/messages/**",
-                                "/api/histories/**",
-                                "/api/payments/**",
-                                "/api/categories/**"
-                        ).permitAll()
+                        .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
+
                         .requestMatchers("/api/register", "/api/login", "/api/google-login").permitAll()
+
+                        .requestMatchers("/api/*/public/**").permitAll()
+                        .requestMatchers("/api/*/secure/**").authenticated()
+                        .requestMatchers("/api/admin/secure/**").hasRole("ADMIN")
+
                         .anyRequest().authenticated()
                 )
                 .exceptionHandling(exception -> exception
@@ -82,13 +76,13 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
 
         CorsConfiguration corsConfiguration = new CorsConfiguration();
-        // List<String> allowedOrigins = List.of(allowedOriginsStr.split(","));
-        // corsConfiguration.setAllowedOrigins(List.of(allowedOrigins));
-        corsConfiguration.setAllowedOrigins(List.of("*"));
+
+        corsConfiguration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
 
         corsConfiguration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         corsConfiguration.setAllowedHeaders(List.of("*"));
-        // corsConfiguration.setAllowCredentials(true);
+        corsConfiguration.setAllowCredentials(true);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", corsConfiguration);
 
